src/app/room/room.component.scss
div, button{
  transition: all ease 200ms;
}
#room, #sidebar{
  display: inline-block;
  height: calc(100vh - 40px);
  top: 0;
  position: absolute;
}
#room {
  width: 100vw;
  text-align: center;
  box-shadow: -17px 0px 17px 16px rgba(0,0,0,0.75);

  #loaded-when-room-received {
    display: grid;
    grid-template-rows: 1fr;
    grid-column-gap: 1vw;
    grid-row-gap: 0;
    height: 100%;
    text-align: initial;
    padding: 1.1vw;
    box-sizing: border-box;

    & > * {
      min-width: 0;
      min-height: 0;
    }
  }
  #loaded-when-room-received.cameracount-2 {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 1fr;
    
    .vertical-centering{
      max-width: calc((((100vh - 40px) / 1) - (2.1vw)) - 2vw);
    }
  }
  #loaded-when-room-received.cameracount-4 {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    
    .vertical-centering{
      max-width: calc((((100vh - 40px) / 2) - (2.1vw)) - 2vw);
    }
  }
  #loaded-when-room-received.cameracount-6 {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
    
    .vertical-centering{
      max-width: calc((((100vh - 40px) / 2) - (2.1vw)) - 2vw);
    }
  }
  #loaded-when-room-received.cameracount-9 {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);

    .vertical-centering{
      max-width: calc((((100vh - 40px) / 3) - (2.1vw)) - 2vw);
    }
  }
  #loaded-when-room-received.cameracount-12 {
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(3, 1fr);
  
    .vertical-centering{
      max-width: calc((((100vh - 40px) / 3) - (2.1vw)) - 2vw);
    }
  }
  #loaded-when-room-received.cameracount-16 {
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(4, 1fr);
    
    .vertical-centering{
      max-width: calc((((100vh - 40px) / 4) - (2.1vw)) - 2vw);
    }
  }
  #loaded-when-room-received.cameracount-20 {
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(4, 1fr);
    
    .vertical-centering{
      max-width: calc((((100vh - 40px) / 4) - (2.1vw)) - 2vw);
    }
  }
}
#room.sidebar-open{
  width: 68vw;
}
#sidebar{
  background-color: rgba(0,0,0,0.1);
  right: 0;
  z-index: -1;
  box-sizing: border-box;
  width: 0;
  overflow: hidden;
}
#sidebar.sidebar-open{
    width: 32vw;
}
#sidebar-close-button{
  cursor: pointer;
  padding: 1vw 2vw;
  background-color: rgba(255,255,255,0.9);
  border-radius: 0.7vw;
  width: fit-content;
  margin-top: 4vw;
}
#sidebar-close-button:hover{
  text-decoration: underline;
}
#profile{
  width: 32vw;
  height: 100%;
  padding: 3vw;
  box-sizing: border-box;
  position: absolute;
  right: 0;
  font-size: 1.4vw;

  h1{
    font-size: 3vw;
    margin-top: 0;
  }
}
.camera-container {

  display: flex;
  align-items: center;
  justify-content: center;

  .vertical-centering{
    width: 100%;

    .camera{
      width: 100%;
      padding-bottom: 100%;
      position: relative;
      border-radius: 1vw;
      overflow: hidden;
      background-color: rgb(163, 163, 163);

      // for designing without videos
      // background-color: darkslategrey;
      // TODO: add somekind of TV fuzz or digital stuff, or loading spinner instead
      // TODO: show the user's profile photo instead, to also use when they're muted
    }
    .camera.zeroed{
      // options for handling animations when people join
      // transform: scale(0);
      padding-bottom: 20%;
      // padding-bottom: 0;
    }
    .info {
      padding: 0.3vw 1vw 0.4vw 1vw;
      font-size: 1.4vw;
      cursor: pointer;
    }
    .info:hover{
      text-decoration: underline;
    }
  }
  app-gameboard{
    width: 100%;
    height: 100%;
  }
}
.local {
  box-shadow: none;
  // placeholder for more styles
}
.remote {
  box-shadow: none;
  // placeholder for more styles
}
@keyframes glow {
  0% {
    border-color: rgba(255, 255, 236, 0);
    background-color: rgba(255, 255, 236, 0);
  }
  25% {
      border-color: rgba(255, 255, 236, 0);
      background-color: rgba(255, 255, 236, 0);
  }      
  100% {
    border-color: rgba(240, 216, 2, 0.8);
    background-color: rgba(240, 216, 2, 0.8);
  }
}
.camera-container.glow{
  animation: glow 2000ms ease-out infinite alternate;
  border-radius: 0.7vw;
  border-style: solid;
  border-width: 4px;
}

// For the background image that prompts users to enable webcam
@keyframes test {
  0% {
    opacity: 0;
  }
  35%{
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.local:before {
  content: "";
  background-image: url('../../assets/camera-prompt-1.svg');
  background-size: 80%;
  background-position: center;
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  animation-name: test;
  animation-duration: 2s;
  animation-fill-mode: forwards;
  animation-timing-function: ease;
}

#launch-game, #add-user, #close-game{
  background-color: #a9221d;
  color: #ececec;
  position: absolute;
  bottom: 7px;
  z-index: 1;
  left: 50%;
  width: 126px;
  margin-left: calc(-126px / 2);
  border: none;
  line-height: 20px;
  font-size: 14px;
  font-family: Muli;
  cursor: pointer;
  padding-top: 2px;
  box-sizing: border-box;
  border-radius: 2px;
}
#close-game{
  background-color: rgba(0,0,0,0.7);
}
#add-user{
  left: 30%;
}
#launch-game:hover, #add-user:hover, #close-game:hover{
  background-color: #af100a;
  color: white;
  text-decoration: underline;
}
#close-game:hover{
  background-color: #801792;
}
.transparent{
  opacity: 0;
  pointer-events: none;
}
.camera-square{
  position: relative;
}
.card-holder{
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
}
.card{
  width: 38%;
  padding-top: 53%;
  background-color: white;
  background-image: url('../../assets/games/poker/deck-1.png');
  background-size: 1300% 400%;
  box-shadow: 0.1vw 0.1vw 0.3vw -0.1vw black;
  border-radius: 0.5vw;
  border-width: 0.2vw;
  border-style: solid;
  border-color: white;
  margin: 1%;
  display: inline-block;
  transition: all 450ms ease;
  box-sizing: border-box;
  transform: rotate(-3deg);
  position: absolute !important;
  bottom: 0;
  right: 12%;
}
.card:nth-of-type(2){
  right: -3%;
  z-index: 2;
  transform: rotate(8deg);
}
.back{
  background-image: url('../../assets/games/poker/card-back-1.svg');
  background-size: 100% 100%;
}
.clubs{
  background-position-y: 0%;
}
.diamonds{
  background-position-y: 300%;
}
.hearts{
  background-position-y: 200%;
}
.spades{
  background-position-y: 100%;
}
.ace{
  background-position-x: 0%;
}
.two{
  background-position-x: 1200%;
}
.three{
  background-position-x: 1100%;	
}
.four{
  background-position-x: 1000%;
}
.five{
  background-position-x: 900%;
}
.six{
  background-position-x: 800%;	
}
.seven{
  background-position-x: 700%;
}
.eight{
  background-position-x: 600%;
}
.nine{
  background-position-x: 500%;	
}
.ten{
  background-position-x: 400%;
}
.jack{
  background-position-x: 300%;
}
.queen{
  background-position-x: 200%;	
}
.king{
  background-position-x: 100%;	
}

.poker-chipcounter{
  position: absolute;
  bottom: 5%;
  left: 5%;
  width: 35%;
  border-radius: 0.5vw;
  background-color: rgba(0,0,0,0.7);
  color: white;
  color: #00ff09;
  padding: 2%;
  text-align: center;
  font-family: monospace;
  overflow: hidden;
  border-color: rgba(0,255,0,0.5);
  border-width: 1px;
  border-style: solid;
  padding-top: 1%;
}

